@@ -25,6 +25,8 @@
 
 __docformat__ = 'restructuredtext'
 _context = 'ExportToCSV'
+__version__ = '0.1'
+class_name = 'ExportToCSV'
 
 import os
 
