@@ -27,6 +27,8 @@ in PyTables tables generated via scikits.timeseries.
 """
 
 __docformat__ = 'restructuredtext'
+__version__ = '0.6'
+class_name = 'TSFormatter'
 
 import time
 
@@ -35,7 +37,9 @@ import tables
 try:
     import scikits.timeseries as ts
 except ImportError:
-    pass
+    ts = None
+
+from PyQt4.QtCore import *
 
 import vitables.utils
 
@@ -44,17 +48,39 @@ class TSFormatter(object):
     a time serie and formatting it in a user friendly way.
     """
 
-    def __init__(self, data):
-        """The class constructor.
+    def __init__(self):
+        """Class constructor.
 
-        :Parameter data: the Leaf instance being inspected
+        Dinamically finds new instances of LeafModel and customises them if
+        a time serie is found in its dataset.
         """
 
-        self.leaf = data
+        self.vtapp = vitables.utils.getVTApp()
+        QObject.connect(self.vtapp, SIGNAL("leaf_model_created"), 
+            self.customiseModel)
+
+
+    def customiseModel(self, model):
+        """Inspect a leaf model and customise it if a time serie is found.
+
+        :Parameter model: the LeafModel instance being inspected
+        """
+
+        self.leaf = model.data_source
         self.ts_kind = self.findTS()
         self.ts_frequency = self.tsFrequency()
-        self.formatTime = self.timeFormatter()
-        self.ts_positions = self.tsPosition()
+        model.time_cols = self.tsPositions()
+        if model.time_cols != []:
+            if model.time_cols == [-1]:
+                # Dataset is an array of time series
+                model.formatContent = self.timeFormatter()
+                new_model= ArrayTSModel(model)
+                model.data = new_model.data
+            else:
+                # Dataset is table with 1 or more time series
+                model.formatTime = self.timeFormatter()
+                new_model= TableTSModel(model)
+                model.data = new_model.data
 
 
     def findTS(self):
@@ -82,7 +108,23 @@ class TSFormatter(object):
         return ts_kind
 
 
-    def tsPosition(self):
+    def tsFrequency(self):
+        """Return the frequency (if any) of the time serie.
+
+        Only time series created via scikits.timeseries module have
+        this attribute.
+        """
+
+        ts_freq = None
+        if self.ts_kind == 'scikits_ts':
+            # The frequency of the time serie. Default is 6000 (daily)
+            special_attrs = getattr(self.leaf._v_attrs, 'special_attrs', 
+                {'freq': 6000})
+            ts_freq = special_attrs['freq']
+        return ts_freq
+
+
+    def tsPositions(self):
         """Return the position of the time series going to be formatted.
 
         *If a time series cannot be formatted then it is ignored*.
@@ -100,7 +142,7 @@ class TSFormatter(object):
         """
 
         positions = []
-        if self.ts_kind == 'scikits_ts' and self.locateTSModule():
+        if (self.ts_kind == 'scikits_ts') and ts:
             # If scikits.timeseries module is not available then ViTables
             # cannot format the time serie so it is ignored 
             positions.append(self.leaf.coldescrs['_dates']._v_pos)
@@ -114,47 +156,7 @@ class TSFormatter(object):
         return positions
 
 
-    def tsFrequency(self):
-        """Return the frequency (if any) of the time serie.
-
-        Only time series created via scikits.timeseries module have
-        this attribute.
-        """
-
-        ts_freq = None
-        if self.ts_kind == 'scikits_ts':
-            # The frequency of the time serie. Default is 6000 (daily)
-            special_attrs = getattr(self.leaf._v_attrs, 'special_attrs', 
-                {'freq': 6000})
-            ts_freq = special_attrs['freq']
-        return ts_freq
-
-    def locateTSModule(self):
-        """Find out if the scikits.timeseries module is available.
-        """
-
-        is_available = True
-        try:
-            import scikits.timeseries
-        except ImportError:
-            is_available = False
-        return is_available
-
-
-    def formatScikitsTS(self, value):
-        """Format a given date in a user friendly way.
-
-        Only Date instances (generated via scikits.timeseries module)
-        are formatted by this method.
-
-        :Parameter value: the value attribute for the Date object
-        """
-
-        date = ts.Date(self.ts_frequency, value=value)
-        return date.datetime.strftime('%a %b %d %H:%M:%S %Y')
-
-
-    def timeFormatter(self):
+    def timeFormatter(self, value=0):
         """Return the function to be used for formatting time series.
         """
 
@@ -169,5 +171,110 @@ class TSFormatter(object):
         return time_formatter
 
 
+    def formatScikitsTS(self, value):
+        """Format a given date in a user friendly way.
 
+        Only Date instances (generated via scikits.timeseries module) are
+        formatted with this method.
+
+        :Parameter value: the value attribute for the Date object
+        """
+
+        date = ts.Date(self.ts_frequency, value=value)
+        return date.datetime.strftime('%a %b %d %H:%M:%S %Y')
+
+
+
+class ArrayTSModel(QAbstractTableModel):
+    """
+    A model for array datasets containing time series.
+
+    The data is read from data sources (i.e., HDF5/PyTables nodes) by
+    the model.
+    """
+
+    def __init__(self, model, parent=None):
+        """Create the model.
+
+        :Parameters:
+
+            - `model`: the LeafModel instance being customised
+            - `parent`: the parent of the model
+        """
+
+        QAbstractTableModel.__init__(self, parent)
+        self.numrows = model.numrows
+        self.rbuffer = model.rbuffer
+        self.formatContent = model.formatContent
+
+
+    def data(self, index=QModelIndex(), role=Qt.DisplayRole):
+        """Returns the data stored under the given role for the item
+        referred to by the index.
+
+        :Parameters:
+
+        - `index`: the index of a data item
+        - `role`: the role being returned
+        """
+
+        if not index.isValid() or \
+            not (0 <= index.row() < self.numrows):
+            return QVariant()
+        cell = self.rbuffer.getCell(self.rbuffer.start + index.row(), index.column())
+        if role == Qt.DisplayRole:
+            return QVariant(self.formatContent(cell))
+        elif role == Qt.TextAlignmentRole:
+            return QVariant(int(Qt.AlignLeft|Qt.AlignTop))
+        else:
+            return QVariant()
+
+
+class TableTSModel(QAbstractTableModel):
+    """
+    A model for table datasets containing time series.
+
+    The data is read from data sources (i.e., HDF5/PyTables nodes) by
+    the model.
+    """
+
+    def __init__(self, model, parent=None):
+        """Create the model.
+
+        :Parameters:
+
+            - `model`: the LeafModel instance being customised
+            - `parent`: the parent of the model
+        """
+
+        QAbstractTableModel.__init__(self, parent)
+        self.numrows = model.numrows
+        self.rbuffer = model.rbuffer
+        self.time_cols = model.time_cols
+        self.formatTime = model.formatTime
+        self.formatContent = model.formatContent
+
+
+    def data(self, index=QModelIndex(), role=Qt.DisplayRole):
+        """Returns the data stored under the given role for the item
+        referred to by the index.
+
+        :Parameters:
+
+        - `index`: the index of a data item
+        - `role`: the role being returned
+        """
+
+        if not index.isValid() or \
+            not (0 <= index.row() < self.numrows):
+            return QVariant()
+        cell = self.rbuffer.getCell(self.rbuffer.start + index.row(), index.column())
+        if role == Qt.DisplayRole:
+            if index.column() in self.time_cols:
+                return QVariant(self.formatTime(cell))
+            return QVariant(self.formatContent(cell))
+        elif role == Qt.TextAlignmentRole:
+            return QVariant(int(Qt.AlignLeft|Qt.AlignTop))
+        else:
+            return QVariant()
 
